--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,8 @@
     "import/no-cycle": "error",
     "react/prop-types": "off",
     "@typescript-eslint/ban-ts-comment": "error",
-    "@typescript-eslint/consistent-type-imports": "off"
+    "@typescript-eslint/consistent-type-imports": "off",
+    "@typescript-eslint/no-confusing-void-expression": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
