--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
+    "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
