--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/ban-ts-comment": "error",
     "@typescript-eslint/consistent-type-imports": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
