--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.7",
     "@uploadthing/react": "^6.1.0",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
@@ -59,11 +60,11 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "@typescript-eslint/type-utils": "^6.17.0",
-    "@typescript-eslint/types": "^6.17.0",
-    "@typescript-eslint/utils": "^6.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "@typescript-eslint/type-utils": "^6.18.0",
+    "@typescript-eslint/types": "^6.18.0",
+    "@typescript-eslint/utils": "^6.18.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
