--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "CI=false next build",
+    "build": "next build",
     "start": "next start",
     "lint:check": "eslint --ext .ts,.tsx ./src --no-error-on-unmatched-pattern",
     "lint:fix": "eslint --ext .ts,.tsx ./src --no-error-on-unmatched-pattern --fix",
