--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@typescript-eslint/types": "^6.18.0",
     "@typescript-eslint/utils": "^6.18.0",
     "autoprefixer": "^10.4.16",
+    "encoding": "^0.1.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
