--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.1",
+    "@clerk/nextjs": "^4.29.2",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
@@ -32,7 +32,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.17.7",
+    "@tanstack/react-query": "^5.17.9",
     "@uploadthing/react": "^6.1.0",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
@@ -42,8 +42,8 @@
     "emoji-mart": "^5.5.2",
     "livekit-client": "^1.15.6",
     "livekit-server-sdk": "^1.2.7",
-    "lucide-react": "^0.306.0",
-    "next": "^14.0.4",
+    "lucide-react": "^0.307.0",
+    "next": "13.4.12",
     "next-themes": "^0.2.1",
     "prisma": "^5.7.1",
     "query-string": "^8.1.0",
@@ -61,7 +61,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
@@ -93,6 +93,5 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^0.0.1-alpha.0",
     "yarn-upgrade-all": "^0.7.2"
-  },
-  "packageManager": "yarn@4.0.2"
+  }
 }
