--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@livekit/components-react": "^1.5.1",
     "@livekit/components-styles": "^1.0.8",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.8.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -38,19 +38,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "date-fns": "^3.1.0",
+    "date-fns": "^3.2.0",
     "emoji-mart": "^5.5.2",
     "livekit-client": "^1.15.6",
     "livekit-server-sdk": "^1.2.7",
-    "lucide-react": "^0.307.0",
-    "next": "13.4.12",
+    "lucide-react": "^0.308.0",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.3",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "tailwind-merge": "^2.2.0",
@@ -61,15 +61,15 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.10.7",
+    "@types/node": "^20.10.8",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.18.0",
-    "@typescript-eslint/parser": "^6.18.0",
-    "@typescript-eslint/type-utils": "^6.18.0",
-    "@typescript-eslint/types": "^6.18.0",
-    "@typescript-eslint/utils": "^6.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@typescript-eslint/type-utils": "^6.18.1",
+    "@typescript-eslint/types": "^6.18.1",
+    "@typescript-eslint/utils": "^6.18.1",
     "autoprefixer": "^10.4.16",
     "encoding": "^0.1.13",
     "eslint": "^8.56.0",
@@ -80,7 +80,7 @@
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
@@ -93,5 +93,6 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^0.0.1-alpha.0",
     "yarn-upgrade-all": "^0.7.2"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
