--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY>
 CLERK_SECRET_KEY=<CLERK_SECRET_KEY>
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=<NEXT_PUBLIC_CLERK_SIGN_IN_URL>
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=<NEXT_PUBLIC_CLERK_SIGN_UP_URL>
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=<NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL>
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=<NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL>
+DATABASE_URL=<DATABASE_URL>
+UPLOADTHING_SECRET=<UPLOADTHING_SECRET>
+UPLOADTHING_APP_ID=<UPLOADTHING_APP_ID>
+LIVEKIT_API_KEY=<LIVEKIT_API_KEY>
+LIVEKIT_API_SECRET=<LIVEKIT_API_SECRET>
+NEXT_PUBLIC_LIVEKIT_URL=<NEXT_PUBLIC_LIVEKIT_URL>
